force-app/main/default/objects/LM_PersonaPurchaseAllocation__c/LM_PersonaPurchaseAllocation__c.object-meta.xml
<CustomObject>
    <description
  >Junction between a Persona and a Purchase Condition. Declares which population (Persona) belongs to which purchase, and in what proportion (Weight). Consumed by the assignment-generation batch to stamp each generated user assignment with a single purchase condition.</description>
    <label>Persona Purchase Allocation</label>
    <nameField>
        <displayFormat>PPA-{00000}</displayFormat>
        <label>Persona Purchase Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Purchase Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>