force-app/main/default/objects/LM_PersonaPurchaseAllocation__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description
  >Persona whose query population this allocation splits across purchase conditions.</description>
    <inlineHelpText>The persona this allocation belongs to.</inlineHelpText>
    <label>Persona</label>
    <referenceTo>LM_ProductLicensePersona__c</referenceTo>
    <relationshipLabel>Persona Purchase Allocations</relationshipLabel>
    <relationshipName>PersonaPurchaseAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>