force-app/main/default/objects/LM_PersonaPurchaseAllocation__c/fields/PurchaseCondition__c.field-meta.xml
<CustomField>
    <fullName>PurchaseCondition__c</fullName>
    <description
  >Purchase condition that this slice of the persona population is attributed to.</description>
    <inlineHelpText
  >The purchase condition this allocation attributes users to.</inlineHelpText>
    <label>Purchase Condition</label>
    <referenceTo>LM_ProductLicensePurchaseCondition__c</referenceTo>
    <relationshipLabel>Persona Purchase Allocations</relationshipLabel>
    <relationshipName>PersonaPurchaseAllocations</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>