force-app/main/default/objects/LM_PersonaPurchaseAllocation__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description
  >Partition quota. When the same persona links to more than one purchase of the same product license, its query population is split across those purchases proportionally to this weight. A single allocation means 100% implicitly.</description>
    <inlineHelpText
  >Proportion (percent) of this persona's users attributed to this purchase, when the persona spans multiple purchases.</inlineHelpText>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Percent</type>
</CustomField>